[gd_scene load_steps=17 format=2]

[ext_resource path="res://resources/transitions/empty.png" type="Texture" id=1]
[ext_resource path="res://resources/transitions/talk_cloud.png" type="Texture" id=2]
[ext_resource path="res://sources/common/shaders/PixelPerfect.gdshader" type="Shader" id=4]
[ext_resource path="res://sources/game/transitions/ClariceStreetTalk.gd" type="Script" id=5]
[ext_resource path="res://resources/ui/Arrow/icons8-pixel-arrow-100.png" type="Texture" id=6]
[ext_resource path="res://resources/transitions/talk_cloud_straigth.png" type="Texture" id=7]
[ext_resource path="res://resources/transitions/imagem 10 - conversa 1 - equidade de genro.png" type="Texture" id=8]
[ext_resource path="res://resources/fonts/Ballon.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://sources/game/transitions/bases/ArrowTexture.gd" type="Script" id=10]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_color = Color( 0.768627, 0.768627, 0.768627, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_color = Color( 0.768627, 0.768627, 0.768627, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 4 )

[node name="ClariceStreetTalk" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
textList = [ "Oi?! Você não é daqui né? Vi você saindo do bairro étnico racial, está perdido?", "self: Nossa, você caiu do céu!", "self: Preciso de ajuda para atravessar o bairro pelo melhor caminho.", "Prazer, eu sou a Clarice. Quanto à orientação, eu posso sim ajudar, mas antes você terá que me fazer um favor!", "self: Tudo bem, o que você precisa?", "Estou com um problema no encanamento da cidade e preciso de ajuda para conectar os canos corretamente. Você pode me acompanhar até a sala de máquinas?", "self: Claro!" ]

[node name="BackgroundTexture" type="TextureRect" parent="."]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="PersonTalk" type="Control" parent="."]
visible = false
margin_left = 63.0
margin_top = 170.0
margin_right = 103.0
margin_bottom = 210.0
rect_scale = Vector2( 1.4, 1.4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TalkCloudTexture" type="TextureRect" parent="PersonTalk"]
material = SubResource( 2 )
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 68.0
margin_right = 340.0
margin_bottom = 688.0
texture = ExtResource( 2 )

[node name="TalkLabel" type="Label" parent="PersonTalk"]
anchor_left = 0.5
anchor_top = 4.299
anchor_right = 8.51
anchor_bottom = 9.344
margin_left = -1.0
margin_top = 21.04
margin_right = 0.599976
margin_bottom = 22.24
custom_colors/font_color = Color( 0, 0.00392157, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ArrowTexture" type="TextureRect" parent="PersonTalk"]
material = SubResource( 7 )
margin_left = 310.347
margin_top = 366.0
margin_right = 410.347
margin_bottom = 466.0
rect_scale = Vector2( 0.33146, 0.33146 )
texture = ExtResource( 6 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelfTalk" type="Control" parent="."]
visible = false
margin_left = -8.0
margin_top = 697.0
margin_right = 32.0
margin_bottom = 737.0
rect_scale = Vector2( 1.3, 1.3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TalkCloudTexture" type="TextureRect" parent="SelfTalk"]
modulate = Color( 0.352941, 0.752941, 0.94902, 1 )
material = SubResource( 4 )
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.64
margin_top = 129.443
margin_right = 409.36
margin_bottom = 627.443
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkLabel" type="Label" parent="SelfTalk"]
anchor_left = 1.0
anchor_top = 5.741
anchor_right = 7.42
anchor_bottom = 9.766
margin_left = 6.0
margin_top = 1.35999
margin_right = -7.80002
margin_bottom = -0.640015
custom_colors/font_color = Color( 0, 0.00392157, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowTexture" type="TextureRect" parent="SelfTalk"]
material = SubResource( 8 )
margin_left = 273.077
margin_top = 366.923
margin_right = 373.077
margin_bottom = 466.923
rect_scale = Vector2( 0.298223, 0.298223 )
texture = ExtResource( 6 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickAreas" type="Node2D" parent="."]

[node name="NextTalk" type="TouchScreenButton" parent="ClickAreas"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 367, 53 )
scale = Vector2( 1.35022, 4.64446 )
normal = ExtResource( 1 )
pressed = ExtResource( 1 )

[node name="ReturnTalk" type="TouchScreenButton" parent="ClickAreas"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 7, 61 )
scale = Vector2( 1.39453, 4.64446 )
normal = ExtResource( 1 )
pressed = ExtResource( 1 )

[node name="GenericTimer" type="Timer" parent="."]

[connection signal="pressed" from="ClickAreas/NextTalk" to="." method="_on_NextTalk_pressed"]
[connection signal="pressed" from="ClickAreas/ReturnTalk" to="." method="_on_ReturnTalk_pressed"]
